# rkllm-cli

./: .gitignore  devenv.nix  flake.nix  overrides.nix  pyproject.toml
devenv/modules/: airockchip.nix  librkllmrt.nix  librknnrt.nix
src/rkllm/: RKLLM.py  cli.py  types.py
