[project]
name = "rkllm-cli"
version = "0.0.1"
readme = "README.md"
authors = [
    {name = "Asko Soukka", email = "asko.soukka@iki.fi"},
]
requires-python = ">= 3.10, <3.11"
dependencies = [
    "fastapi>=0.115.11",
    "huggingface-hub>=0.29.1",
    "pydantic>=2.10.6",
    "transformers>=4.49.0",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
rkllm = "rkllm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rkllm"]

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = true
line_length = 200
lines_after_imports = 2
lines_between_types = 0
no_sections = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=5.13.2",
]
